# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = -Wall -std=c++11
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = hackerrank main input test
hackerrank_SOURCES = hackerrank.cpp 
input_SOURCES = input.cpp
test_SOURCES = input.cpp
main_SOURCES = main.cpp substringGenerator.cpp  substringGenerator.hpp
